<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <SwitchPreferenceCompat
        android:key="units"
        android:title="@string/choose_distance_unit_meters_miles"
        android:summary="@string/switch_summary"
        android:textSize="16sp"/>

    <ListPreference
        android:key="mapInterval"
        android:title="@string/update_map_location_every"
        android:defaultValue="1"
        android:entries="@array/intervalsNames"
        android:entryValues="@array/intervalsValues"
        />

    <ListPreference
        android:key="measureInterval"
        android:title="@string/settings_measure"
        android:defaultValue="1"
        android:entries="@array/intervalsNames"
        android:entryValues="@array/intervalsValues"
        />
</PreferenceScreen>