<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MapsActivity"
    android:id="@+id/mapsActivity">
<fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    tools:context=".ui.MapsActivity" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAppbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        map:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <Switch
        android:id="@+id/swGPSorSavePower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_save_power"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_alignTop="@+id/txtDesiredPace"
        android:layout_toEndOf="@+id/txtDesiredPaceUnit"
        />

    <TextView
        android:id="@+id/txtPace"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/pace"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_above="@+id/txtPaceValue"
        />

    <TextView
        android:id="@+id/txtPaceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/center"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txtPaceValue"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="46sp"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/txtPaceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSpeedUnit"
        android:layout_marginStart="3dp"
        android:layout_alignTop="@+id/txtPaceValue"
        android:layout_toEndOf="@+id/center"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="46sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_time"
        android:layout_below="@+id/txtDesiredPace"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTimeValue"
        android:layout_marginStart="5dp"
        android:layout_alignTop="@+id/txtTime"
        android:layout_toEndOf="@+id/txtTime"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtDesiredTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_desired_time"
        android:layout_alignTop="@+id/txtTime"
        android:layout_toEndOf="@+id/timeSlash"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/timeSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:layout_toEndOf="@+id/txtTimeValue"
        android:layout_alignTop="@id/txtDesiredTime"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        />
    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTime"
        android:text="@string/distance"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txtDistanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtDistance"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/txtDistance"
        android:text="@string/distanceValue"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtRouteDistanceSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/txtDistanceValue"
        android:text="@string/slash"
        android:layout_marginStart="5dp"
        android:layout_alignTop="@+id/txtDistance"

        android:textSize="16sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtRouteDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/txtRouteDistanceSlash"
        android:text="@string/RouteDistance"
        android:layout_marginStart="5dp"
        android:layout_alignTop="@+id/txtDistance"

        android:textSize="16sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtDistanceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DistanceUnit"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/txtRouteDistance"
        android:layout_alignTop="@+id/txtRouteDistance"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/txtDesiredPace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desired_pace"
        android:layout_below="@+id/map"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtDesiredPaceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtDesiredPace"
        android:layout_toEndOf="@id/txtDesiredPace"
        android:text="@string/txtDesired_pace_value"
        android:layout_marginStart="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtDesiredPaceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSpeedUnit"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/txtDesiredPaceValue"
        android:layout_alignTop="@+id/txtDesiredPace"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btnStart_Pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDistance"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/center"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/start_btn"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDistance"
        android:layout_marginTop="10dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/center"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/finish_btn"
        android:textSize="20sp" />
</RelativeLayout>