<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home.HomeFragment"
    android:id="@+id/HomeFragment">

    <TextView
        android:id="@+id/txtFr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_data_and_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <EditText
        android:id="@+id/edtxtInputDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edtxtInputTime"
        app:layout_constraintTop_toBottomOf="@id/txtFr1"
        android:inputType="time"
        android:hint="@string/edittext_input_distance"
        />

    <TextView
        android:id="@+id/txtUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meters"
        app:layout_constraintStart_toStartOf="@id/edtxtInputDistance"
        app:layout_constraintEnd_toEndOf="@id/edtxtInputDistance"
        app:layout_constraintTop_toBottomOf="@+id/edtxtInputDistance"
        />

    <EditText
        android:id="@+id/edtxtInputTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_input_desired_time"
        android:digits="0123456789-"
        android:maxLength="8"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edtxtInputDistance"
        app:layout_constraintTop_toBottomOf="@id/txtFr1" />

    <Button
        android:id="@+id/btnFr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_new_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swMethod"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/txtChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtUnit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/choose_step"
        android:layout_marginTop="40dp"

        />
    <Switch
        android:id="@+id/swMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChoose"
        android:text="@string/measuring_method"
        android:layout_marginTop="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>